# inspector

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  ci.sh
include/: inspector.h
include/inspector/: PracticalSocket.h  common.h  dummy.h  prompt.h  repl.h  socket.h
lib/: CMakeLists.txt  PracticalSocket.cpp  inspector.cpp  prompt.cpp  repl.cpp  socket.cpp
prompt/: main.py  promptserver.py  repl.py
python/: CMakeLists.txt  inspector.in  setup.py.in
python/inspector/: __init__.py  cflags.py  clang_completer.py  config.py.in  libpath.py.in  prebuild.py  repl.py  repl_server.py
scripts/: cindex-dump.py
test/: CMakeLists.txt  run_repl.cpp  test.cpp
